k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-demo
  labels:
    name: devsecops-demo
    environment: production
